css style fix when label is too long

--- a/src/main/assets-common/css/hakuperusteet.less
+++ b/src/main/assets-common/css/hakuperusteet.less
@@ -129,6 +129,12 @@ p {
     display: block;
     padding-bottom: 10px;
   }
+  select {
+    vertical-align: top;
+  }
+  input {
+    vertical-align: top;
+  }
   input[type=submit] {
     margin-left: @formLeftColumnWidth;
   }
